# Pharmacloud-Backend

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  tempCodeRunnerFile.python
src/app/: main.py
src/app/application/dto/: detection_dto.py  drug_dto.py  drug_metadata_dto.py  prescription_dto.py  statistics_dto.py  user_dto.py
src/app/application/mappers/: detection_mapper.py  drug_mapper.py  drug_metadata_mapper.py  prescription_mapper.py  statistics_mapper.py  user_mapper.py
src/app/application/use_cases/: auth_service.py  detection_service.py  drug_metadata_service.py  drug_service.py  notify_service.py  prescription_service.py  statistics_service.py  user_service.py
src/app/domain/constants/: order_status.py
src/app/domain/entities/: detection.py  drug.py  drug_metadata.py  prescription.py  statistics.py  user.py
src/app/domain/exception/: detection.py  drug.py  prescription.py  security.py  user.py
src/app/domain/repositories/: detection.py  drug.py  drug_metadata.py  prescription.py  statistics.py  user.py
src/app/domain/security/: password_hasher.py  token.py
src/app/domain/storage/: storage.py
src/app/domain/websocket/: connection_manager.py
src/app/infrastructure/db/: database.py
src/app/infrastructure/mappers/: detection_mapper.py  drug_mapper.py  drug_metadata_mapper.py  prescription_mapper.py  security_mapper.py  statistics_mapper.py  user_mapper.py
src/app/infrastructure/models/: detection.py  drug.py  drug_metadata.py  prescription.py  user.py
src/app/presentation/: dependencies.py
(+35 files in other folders)
